Using gnuplot to draw the data diagrams.

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -5,7 +5,7 @@
 
 Dear Dr. Editor,
 
-I am pleased to send you the enclosed manuscript entitled "Performance analysis of different arrangements of a new layout dish-Stirling system", which we wish to be considered for publication in your prestigious journal Applied thermal engineering.
+I am pleased to send you the enclosed manuscript entitled "Configuration optimization of Stirling engine array in a cascade solar system", which we wish to be considered for publication in your prestigious journal Energy Conversion and Management.
 
 Authors and our affiliations are listed as bellow:
 
@@ -22,9 +22,9 @@ Authors and our affiliations are listed as bellow:
 
 \end{itemize}
 
-In this work, we represent a new layout scheme of dish-Stirling system, which has some advantages compared to traditional dish-Stirling system. In the new scheme, Stirling engines are arranged in the Stirling engine array (SEA), whose performance may be influenced by the connection types of the engines. To find out the influence of connection types on the performance of an SEA, connection types of SEA were classified into five basic types. A Stirling engine model considering various irreversible phenomena was developed and validated. SEA analytical models were developed based on the Stirling engine model. Different connection types of SEA were compared with various parameters. It was found that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
+In this work, we considered the configuration optimization of Stirling engine array in a cascade solar system. In the cascade system, Stirling engines are arranged in the Stirling engine array (SEA), whose performance may be influenced by the connection types of the engines. To find out the influence of connection types on the performance of an SEA, connection types of SEA were classified into five basic types. A Stirling engine model considering various irreversible phenomena was developed and validated. SEA analytical models were developed based on the Stirling engine model. Different connection types of SEA were compared with various parameters. It was found that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
 
-This manuscript contains original research and has not been submitted/published earlier in any journal and is not being considered for publication elsewhere. I hope this paper is suitable for Applied Thermal Engineering.
+This manuscript contains original research and has not been submitted/published earlier in any journal and is not being considered for publication elsewhere. I hope this paper is suitable for Energy Conversion and Management.
 
 We deeply appreciate your consideration of our manuscript, and we look forward to receiving comments from the reviewers. If you have any queries, please don't hesitate to contact me at the address below.
 
