--- a/SEA.bib
+++ b/SEA.bib
@@ -1,12 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for 张成 at 2017-04-03 23:32:02 +0800 
+%% Created for 张成 at 2018-04-02 15:45:15 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Zhang2017,
+	Abstract = {Abstract This paper represents a novel solar thermal cascade system using both trough and dish systems for power generation. An effective structure using the condensed fluid of Rankine cycle to cool the Stirling engines to use the heat released by Stirling engines was proposed. The cascade system model with different fluid circuits was developed. The models of some important components of the system, such as dish collector, trough collector and Stirling engine array, are presented with detail explanation in this paper. Corresponding stand-alone systems were also developed for comparison. Simulations were conducted with the models to find out efficiency difference between cascade system and corresponding stand-alone systems. The directions to increase the efficiency difference were also considered. Results show that the cascade system can achieve a higher efficiency with a high solar irradiance (&gt;550 W/m2). The flow type of fluids between heating and cooling Stirling engine array is also required to concern on designing a cascade system with Stirling engine array. },
+	Author = {Cheng Zhang and Yanping Zhang and Inmaculada Arauzo and Wei Gao and Chongzhe Zou},
+	Date-Added = {2018-04-02 02:18:42 +0000},
+	Date-Modified = {2018-04-02 07:45:14 +0000},
+	Issn = {0196-8904},
+	Journal = {Energy Conversion and Management},
+	Keywords = {Stirling engine array},
+	Pages = {494 - 503},
+	Title = {Cascade system using both trough system and dish system for power generation},
+	Volume = {142},
+	Year = {2017},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0196890417302844},
+	Bdsk-Url-2 = {http://doi.org/10.1016/j.enconman.2017.03.073}}
 
 @article{Bell2014,
 	Author = {Bell, Ian H. and Wronski, Jorrit and Quoilin, Sylvain and Lemort, Vincent},
