Created folders for gnuplot files and data files.

--- a/SEA.tex
+++ b/SEA.tex
@@ -709,9 +709,9 @@ According to Carnot cycle efficiency formula, the temperature of heating fluid d
 
 \begin{figure}[htbp]
 	\centering
-	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{T_ih.gnuplot}
+	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{gnuplot/T_ih.gnuplot}
 	\caption{Influence of $T_{i,h}$ on efficiency and power of SEA}
-	\label{fig:T_ih}
+	\label{fig:Ti_h}
 \end{figure}
 
 Curves of performance of SEAs and $T_{i,h}$ are shown in Figure~\ref{fig:Ti_h}.
@@ -734,7 +734,7 @@ According to Equation~\ref{Eq:q_h},~\ref{Eq:q_c}, $q_mc_p$ (both $q_{m,h}c_{p,h}
 
 \begin{figure}[htbp]
 	\centering
-	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{q_mhcp_h.gnuplot}
+	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{gnuplot/q_mhcp_h.gnuplot}
 	\caption{Influence of $q_{m,h}c_{p,h}$ on efficiency and power of SEA}
 	\label{fig:qm_hcp_h}
 \end{figure}
@@ -753,7 +753,7 @@ For a large $q_{m,h}c_{p,h}$ ($>$ 800 W/K), Type 2 , Type 3 and Type 5 have simi
 
 \begin{figure}[htbp]
 	\centering
-	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{q_mccp_c.gnuplot}
+	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{gnuplot/q_mccp_c.gnuplot}
 	\caption{Influence of $\dot{m}_cc_{p,c}$ on efficiency and power of SEA}
 	\label{fig:qm_ccp_c}
 \end{figure}
@@ -774,7 +774,7 @@ By varying the number of engines in SEA, the performance levels changed accordin
 
 \begin{figure}[htbp]
 	\centering
-	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{n_se.gnuplot}
+	\gnuplotloadfile[terminal=epslatex, terminaloptions=color dashed]{gnuplot/n_se.gnuplot}
 	\caption{Influence of $n_{se}$ on efficiency and power of SEA}
 	\label{fig:n_se}
 \end{figure}
